feat: adicionada logica js

--- a/day-2/style.css
+++ b/day-2/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Muli&display=swap');
 
 :root {
-  --line-border-fill: #40E0D0;
+  --line-border-fill: #8A2BE2;
   --line-border-empty: #e0e0e0
 }
 
