--- a/day-3/style.css
+++ b/day-3/style.css
@@ -95,7 +95,7 @@ h3 {
   font-weight: bold;
   height: 0;
   justify-content: center;
-  transition: 0.3ss ease;
+  transition: 0.3s ease;
 }
 
 .text {
