--- a/day-4/style.css
+++ b/day-4/style.css
@@ -46,14 +46,12 @@ nav.active ul {
 }
 
 nav ul li {
-  transform: rotateY(0deg);
   opacity: 0;
-  transition: transform 0.6 linear, opacity 0.6s linear;
+  transition: opacity 0.1s linear;
 }
 
 nav.active ul li {
   opacity: 1;
-  transform: rotateY(360deg);
 }
 
 nav ul a {
